took angular material 0.7 in use & fixed some theme & sidebar issues related to it; in main, made storemgr visible to whole ctrl to fix issu
commented out content of about/test as about is not used anyway

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -4,7 +4,7 @@
  * @license MIT
  * v0.6.1
  */
-md-backdrop.md-opaque.md-green-theme {
+/*md-backdrop.md-opaque.md-green-theme {
   background-color: rgba(0, 0, 0, 0.3);
   position: absolute; }
 
@@ -211,7 +211,7 @@ md-tooltip.md-green-theme {
   color: #ffffff; }
   md-tooltip.md-green-theme .md-background {
     background-color: rgba(0, 0, 0, 0.52); }
-
+*/
 
 
 
